datos de contacto

--- a/claudio.html
+++ b/claudio.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Datos de contacto</h1>
+    <h2>Nombre:</h2> <a href="mailto:cltorresfe@gmail.com">Claudio Torres Añzco</a>
+    <h2>Dirección:</h2> Francisco Ramirez S/N.
+    <h2>Teléfono:</h2> 955555555
 </body>
 </html>
