ingreso datos de contacto

--- a/cesar.html
+++ b/cesar.html
@@ -7,6 +7,12 @@
     <title>César</title>
 </head>
 <body>
-    
+    <h1>César Herrera</h1>
+    <ul>
+        <li><b>Nombre:</b> César Patricio Herrera Crisóstomo</li>
+        <li><b>Mail:</b> cesarherreracriso@gmail.com</li>
+        <li><b>GitHub:</b> <a href="https://github.com/CesarHC"> CesarHC </a></li>
+        <li></li>
+    </ul>
 </body>
 </html>
