pagina contacto nombre, correo y telefono

--- a/mauricio.html
+++ b/mauricio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Datos de Contacto Mauricio Acuña</h1>
-    <div class="alert alert-primary" role="alert">Nombre: Mauricio Acuña Fuentes<br>correo: mauricio.acuna.f@redsalud.gob.cl</div>
+    <div class="alert alert-primary" role="alert">Nombre: Mauricio Acuña Fuentes<br>correo: mauricio.acuna.f@redsalud.gob.cl<br>Teléfono contacto: 42 2 528278</div>
     <p></p>
 </body>
 </html>
