se agrega numer de contacto

--- a/pagina_cristian.html
+++ b/pagina_cristian.html
@@ -11,6 +11,7 @@
     <ul>
         <li>Nombre: Cristian Salinas Cofre</li>
         <li>Correo: cristiansalinascofre@gmail.com</li>
+        <li>Numero de Contacto: 421898</li>
     </ul>
 </body>
 </html>
