--- a/cesar.html
+++ b/cesar.html
@@ -5,14 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>César</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/scss/_variables.scss">
 </head>
 <body>
-    <h1>César Herrera</h1>
-    <ul>
-        <li><b>Nombre:</b> César Patricio Herrera Crisóstomo</li>
-        <li><b>Mail:</b> cesarherreracriso@gmail.com</li>
-        <li><b>GitHub:</b> <a href="https://github.com/CesarHC"> CesarHC </a></li>
-        <li></li>
-    </ul>
+    <div class="container">
+        <div class="alert alert-info display-1 text-center">Actividad Final</div>
+        <div class="col align-self-center">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    César Herrera Crisóstomo
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><b>Nombre:</b> César Patricio Herrera Crisóstomo</li>
+                    <li class="list-group-item"><b>Mail:</b> cesarherreracriso@gmail.com</li>
+                    <li class="list-group-item"><b>GitHub:</b> <a href="https://github.com/CesarHC"> CesarHC </a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
