main mauricio.html enlace volver

--- a/mauricio.html
+++ b/mauricio.html
@@ -11,6 +11,6 @@
 <body>
     <h1>Datos de Contacto Mauricio Acuña</h1>
     <div class="alert alert-primary" role="alert">Nombre: Mauricio Acuña Fuentes<br>correo: mauricio.acuna.f@redsalud.gob.cl<br>Teléfono contacto: 42 2 528278</div>
-    <p></p>
+    <a class="btn btn-primary" href="index.html" role="button">Volver</a>
 </body>
 </html>
