--- a/claudio.html
+++ b/claudio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Contacto</title>
 </head>
 <body>
@@ -11,5 +13,12 @@
     <h2>Nombre:</h2> <a href="mailto:cltorresfe@gmail.com">Claudio Torres Añzco</a>
     <h2>Dirección:</h2> Francisco Ramirez S/N.
     <h2>Teléfono:</h2> 955555555
+    <div class="icons">
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-github-square"></i></a>
+        <a href="#"><i class="fab fa-telegram"></i></a>
+      </div>
 </body>
 </html>
