Pagina presentacion terminada

--- a/jorge_jg.html
+++ b/jorge_jg.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Presentación</h1>
+    <h2>Nombre: Jorge Andrés Jara González</h2>
+    <h2>Email: joajara@gmail.com</h2>
+    <h2>Profesión: Ingeniero en Computación e Informática</h2>
 </body>
 </html>
