commit de segunda locura maxima

--- a/david_locura.html
+++ b/david_locura.html
@@ -9,7 +9,7 @@
 <body>
 
     <ul><li>David Fernandez</li>
-    <li>Locura Extrema</li></ul>
-    
+    <li>Locura Extrema</li>
+    <li>Segundo Locura mas Extrema</li></ul>
 </body>
 </html>
