--- a/eduardo.html
+++ b/eduardo.html
@@ -11,6 +11,7 @@
     <ul>
         <li><b>Nombre:</b> Eduardo Ceballos Sanhueza</li>
         <li><b>Mail:</b> eduardoceballossa@gmail.com</li>
+        <li><b>Teléfono:</b> +56975894453</li>
         <li><b>GitHub:</b> <a href="https://github.com/eduardoceballossa"> eduardoceballossa </a></li>
         <li></li>
     </ul>
