--- a/adiel.html
+++ b/adiel.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
     <title>Actividad Adiel</title>
 </head>
 <body>
+ <div class="container">
 
-    <h2>Actividad Final</h2>
-
-    <ul>
+    <div class="col-lg-12 col-md-12 w-75"> 
+      <br>  
+      <nav class="form-control">
+        <h2 style="color: blueviolet;">Actividad Final</h2>
+      </nav>
+    
+      <ul>
         <li><b>Nombre:</b>&nbsp;Adiel Salazar Muñoz</li>
         <li><b>Email:</b>&nbsp;asalaz20@gmail.com</li>
         <li><b>Telefono:</b>&nbsp;973567996</li>
-    </ul>
+        <li><b>Telefono:</b><a href="https://github.com/asalaz20">&nbsp;GitHub Link</a></li>
+      </ul>
+    </div>
+
+</div>  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>   
 </body>
 </html>
